# devhub-ai-

./: Package.json  README.md
backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  learning.py  portfolio.py  project.py  resume.py  user.py
frontend/: .env.local  next.config.js  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/Styles/: globals.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/practice/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/lib/: auth.ts  utils.ts
frontend/src/types/: index.ts
